--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- LOGO SLIDE -->
         <slide class="title-slide segue nobackground">
   <hgroup class="auto-fadein">
-    h1>Efficient Portfolios Application</h1>
+    <h1>Efficient Portfolios Application</h1>
     <h2>Efficient Frontiers with no risk-free asset</h2>
     <p>Felix<br/></p>
   </hgroup>
