--- a/index.html
+++ b/index.html
@@ -63,29 +63,17 @@
 
 <slide class="class" id="id" style="background:;">
   <hgroup>
-    <h2>Efficient Portfolio</h2>
-    </hgroup>
+    <h2>Data Interpretation</h2>
+  </hgroup>
   <article data-timings="">
- <ol>
-<li><p>Consider two assets A and B with its Returns R, following independent and identically distributed 
-normal distributions</p>
+    <p>For a given Expected Return (portfolio rate of return), the values associated to each stock represent the amount of the stock in the current portfolio. Negative values represent short-selling (sale of a security not owned by the seller or borrowed) and are counteracted by higher positive numbers. The summation of the position equals to 1.</p>
 
-<p>\[R_i\ \sim\ i.i.d. \mathcal{N}(\mu_i,\,\sigma_i^2)\]</p></li>
-<li><p>Portfolio Return and Portfolio Risk (variance) are stated as follows</p></li>
-</ol>
+<p>VaR (Value at Risk) is estimated at a 5% level, meaning that there is a 5% probability that the portfolio will fail in value by the VaR amount calculated.</p>
 
-<p>\[\operatorname{E}(R_p) = w_A \operatorname{E}(R_A) + w_B \operatorname{E}(R_B)\]</p>
-
-<p>\[\sigma_p^2  = w_A^2 \sigma_A^2  + w_B^2 \sigma_B^2 + 2w_Aw_B  \sigma_{A} \sigma_{B} \rho_{AB}\]</p>
-
-<ol>
-<li>Therefore, Markowitz Modern Portfolio Theory states that Efficient Portfolios are the result of the
-minimization problem</li>
-</ol>
-
-<p>\[ \underset{w_A, \; w_B}{\operatorname{arg\,min}} \; \sigma_p^2, \; \text{subject to:} \; w_A + w_B = 1\;\]</p>
+<p>Check it here at <a href="https://frpportfolio.shinyapps.io/frpportfolio/">ShinyApps</a>              </p>
 
   </article>
+  <!-- Presenter Notes -->
 </slide>
 
     <slide class="backdrop"></slide>
@@ -93,30 +81,57 @@ minimization problem</li>
   <div class="pagination pagination-small" id='io2012-ptoc' style="display:none;">
     <ul>
       <li>
-      <a href="#" target="_self" rel='tooltip'
-        data-slide=1 title='Read-And-Delete'>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=1 title='App Summary'>
          1
       </a>
     </li>
     <li>
-      <a href="#" target="_self" rel='tooltip'
-        data-slide=2 title='Slide 2'>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=2 title='Efficient Portfolio'>
          2
       </a>
     </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=3 title='App Outputs'>
+         3
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=4 title='Data Interpretation'>
+         4
+      </a>
+    </li>
   </ul>
-  </div> <!--[if IE]>
-<script
-src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js">
-</script>
-<script>CFInstall.check({mode: 'overlay'});</script>
-<![endif]-->
+  </div>  <!--[if IE]>
+    <script 
+      src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js">  
+    </script>
+    <script>CFInstall.check({mode: 'overlay'});</script>
+  <![endif]-->
 </body>
   <!-- Load Javascripts for Widgets -->
   
-  <!-- LOAD HIGHLIGHTER JS FILES -->
-  <script src="libraries/highlighters/highlight.js/highlight.pack.js"></script>
+  <!-- MathJax: Fall back to local if CDN offline but local image fonts are not supported (saves >100MB) -->
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      tex2jax: {
+        inlineMath: [['$','$'], ['\\(','\\)']],
+        processEscapes: true
+      }
+    });
+  </script>
+  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/2.0-latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  <!-- <script src="https://c328740.ssl.cf1.rackcdn.com/mathjax/2.0-latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script> -->
+  <script>window.MathJax || document.write('<script type="text/x-mathjax-config">MathJax.Hub.Config({"HTML-CSS":{imageFont:null}});<\/script><script src="../libraries/widgets/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"><\/script>')
+</script>
+<!-- LOAD HIGHLIGHTER JS FILES -->
+  <script src="../libraries/highlighters/highlight.js/highlight.pack.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
   <!-- DONE LOADING HIGHLIGHTER JS FILES -->
    
   </html>
+  
