--- a/index.html
+++ b/index.html
@@ -63,6 +63,53 @@
 
 <slide class="class" id="id" style="background:;">
   <hgroup>
+    <h2>Efficient Portfolio</h2>
+  </hgroup>
+  <article data-timings="">
+    <ol>
+<li><p>Consider two assets A and B with its Returns R, following independent and identically distributed 
+normal distributions</p>
+
+<p>\[R_i\ \sim\ i.i.d. \mathcal{N}(\mu_i,\,\sigma_i^2)\]</p></li>
+<li><p>Portfolio Return and Portfolio Risk (variance) are stated as follows</p></li>
+</ol>
+
+<p>\[\operatorname{E}(R_p) = w_A \operatorname{E}(R_A) + w_B \operatorname{E}(R_B)\]</p>
+
+<p>\[\sigma_p^2  = w_A^2 \sigma_A^2  + w_B^2 \sigma_B^2 + 2w_Aw_B  \sigma_{A} \sigma_{B} \rho_{AB}\]</p>
+
+<ol>
+<li>Therefore, Markowitz Modern Portfolio Theory states that Efficient Portfolios are the result of the
+minimization problem</li>
+</ol>
+
+<p>\[ \underset{w_A, \; w_B}{\operatorname{arg\,min}} \; \sigma_p^2, \; \text{subject to:} \; w_A + w_B = 1\;\]</p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="class" id="id" style="background:;">
+  <hgroup>
+    <h2>App Outputs</h2>
+  </hgroup>
+  <article data-timings="">
+    <ol>
+<li>First panel: Stock Price Monthly Evolution from 1998. (Time series)</li>
+<li>Second panel: Stock Monthly Returns (Continuously Compounded Returns) (Time Series)</li>
+<li><p>Third panel: Expected returns of efficient portfolio (efficient frontier) Vs. Risk of Efficient portfolios. 
+             Return and risk is also displayed for individual values, Global Minimum Variance portfolio and 
+             Tangency portfolio.</p></li>
+<li><p>Fourth panel: Portfolio composition given an expected level of return. Negative values imply short-shelling.</p></li>
+<li><p>Sixth panel:  Table summarizing previous graph and calculating VaR for every Efficient Portfolio.</p></li>
+
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="class" id="id" style="background:;">
+  <hgroup>
     <h2>Data Interpretation</h2>
   </hgroup>
   <article data-timings="">
